# PolySolver

./: .gitignore  CMakeLists.txt  LICENSE  PolySolver.cpp  PolySolver.hpp  README.md  build_polysolver.bat  config.json  main.cpp
CMake/: FindAMGX.cmake  FindMKL.cmake  PrepareTests.cmake  VS_tests_template
Kernel/: CMakeLists.txt  Kernel.cpp  Kernel.h
Solvers/: CMakeLists.txt  amgcl.cpp  amgcl.hpp  amgx.cpp  amgx.hpp  cuda_cg.cpp  cuda_cg.hpp  cuda_cg_ic0.cpp  cuda_cg_ic0.hpp  cuda_helper.hpp  cuda_pcg.cpp  cuda_pcg.hpp  hypre.cpp  hypre.hpp  implementation.cpp  implementation.hpp  kernel.cpp  kernel.h  mkl_cg.cpp  mkl_cg.hpp  mkl_pcg.cpp  mkl_pcg.hpp  my_cg.cpp  my_cg.hpp  my_pcg.cpp  my_pcg.hpp  pardiso.cpp  pardiso.hpp  sparse_matrix.cpp  sparse_vector.cpp
Solvers/LinearSolver/: LinearSolver_AMGCL.cpp  LinearSolver_AMGCL.h  LinearSolver_AMGX.cpp  LinearSolver_AMGX.h  LinearSolver_Ginkgo.h  LinearSolver_IMPL.cpp  LinearSolver_IMPL.h  LinearSolver_PARDISO.cpp  LinearSolver_PARDISO.h
SparseAPI/: CMakeLists.txt  SparseAPI.cpp  SparseAPI.h
SparseAPI/LinearSolver/: LinearSolver_AMGX.cpp  LinearSolver_AMGX.h  LinearSolver_IMPL.cpp  LinearSolver_IMPL.h  LinearSolver_PARDISO.cpp  LinearSolver_PARDISO.h  LinearSolver_cuSOLVER.cpp  LinearSolver_cuSOLVER.h
SparseMV/: CMakeLists.txt  Sparse.h  Sparse.hpp  SparseMatrix.cpp  SparseMatrix.hpp  SparseMatrix.ixx  SparseVector.cpp  SparseVector.hpp  SparseVector.ixx
SparseMV-module/: CMakeLists.txt  Sparse.ixx  SparseTests.cpp
Testing/: PolyTests.cpp
Testing/Cases/5x5/: A_copy.txt  B_copy.vec0  L.txt  U.txt  X_AMGX.vec  X_PARDISO.vec  X_cuSOLVERSP_.txt  res.csv
sample/: .gitignore
sample/5x5/: A.txt
